Avoid line breaks in header controls (#4932)
Closes #4920

--- a/apps/browser/src/popup/scss/base.scss
+++ b/apps/browser/src/popup/scss/base.scss
@@ -222,6 +222,7 @@ header {
     justify-content: center;
     align-items: center;
     height: 100%;
+    white-space: pre;
 
     @include themify($themes) {
       color: themed("headerColor");
